--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="first">div made by html</div>
+
+    <div class="first">div made by html عحيشفث</div>
     <script src="main.js"></script>
 </body>
 </html>
